added remove function on pre-population-of-data on user registration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # data setting
 # Enable SQL initialization
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 # Control when the SQL script runs
 spring.jpa.defer-datasource-initialization=true
