spring database security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,11 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # data setting
 # Enable SQL initialization
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 
 # Control when the SQL script runs
 spring.jpa.defer-datasource-initialization=true
 
+
+#spring.security.user.name=isaac
+#spring.security.user.password=123456
